tests/compile_fail/dimension_annotation_violated_unit.stderr
error: Dimension mismatch in expression.
  --> tests/compile_fail/dimension_annotation_violated_unit.rs:13:15
   |
13 |     unit foo: Length = kilograms * kilograms;
   |               ^^^^^^
   |
   = help: The annotation on the left-hand side has dimensions length^1 mass^0
   = help: but the expression on the right-hand side has dimensions length^0 mass^2
